--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -1,18 +1,53 @@
-name: Test project 
-on: 
-  push: 
-    branches: 
+name: Build and deploy JAR app to Azure Web App
+
+env:
+  AZURE_WEBAPP_NAME: devops-summative   # set this to your application's name
+  JAVA_VERSION: '21'                  # set this to the Java version to use
+
+on:
+  push:
+    branches:
       - main
 
 jobs:
-  test: 
+  build:
     runs-on: ubuntu-latest
-    container: 
-      image: node.20
-    steps: 
-    - uses: actions/checkout@v3
-      with: 
-        node-version: 20
-    - run: npm ci
-    - run: npm test 
-    - run: npm run build
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Java version
+        uses: actions/setup-java@v4
+        with:
+          java-version: ${{ env.JAVA_VERSION }}
+          cache: 'maven'
+
+      - name: Build with Maven
+        run: mvn clean install
+
+      - name: Upload artifact for deployment job
+        uses: actions/upload-artifact@v4
+        with:
+          name: java-app
+          path: '${{ github.workspace }}/target/*.jar'
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: 'production'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+
+    steps:
+      - name: Download artifact from build job
+        uses: actions/download-artifact@v4
+        with:
+          name: java-app
+
+      - name: Deploy to Azure Web App
+        id: deploy-to-webapp
+        uses: azure/webapps-deploy@85270a1854658d167ab239bce43949edb336fa7c
+        with:
+          app-name: ${{ env.AZURE_WEBAPP_NAME }}
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+          package: '*.jar'
