--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -19,6 +19,7 @@ jobs:
       - name: Set up Java version
         uses: actions/setup-java@v4
         with:
+          distribution: temurin
           java-version: ${{ env.JAVA_VERSION }}
           cache: 'maven'
 
